few layout issues

--- a/styles.css
+++ b/styles.css
@@ -594,7 +594,7 @@ h3{
     margin-top: 2rem;
     margin:auto;
 }
-p{
+p {
     text-align: center;
     padding-top: 1rem;
     padding-right: 2rem;
@@ -603,7 +603,7 @@ p{
     transition: all 0.3s ease;
     overflow: hidden;
     height: 5rem;
-    font-size:0.8rem;
+    font-size:0.75rem;
     max-width: 40rem;
     margin: auto;
 }
@@ -736,7 +736,7 @@ border: 1px solid var(--primaryColor);
 }
 h1::before {
     content: "";
-    width: 5.5em;
+    width: 5.3em;
     height: 1.5em;
     background: #66bb6a;
     position: absolute;
@@ -758,7 +758,7 @@ h2::before {
     width: 6.5em;
 }
 #exercise h2::before {
-    width: 9em; 
+    width: 8.5em; 
 }
 
 
@@ -767,7 +767,7 @@ h2::before {
 @media screen and (min-width: 403px) {
     h1:before {
             content: "";
-            width: 11.5em;
+            width: 11em;
             height: 1em;
             color: white;
             background: #66bb6a;
@@ -819,26 +819,39 @@ h2::before {
     }
     #exercise{
         max-width: 1440px;
-        margin-top: 0;
+        margin-top: -28rem;
 
+    }
+    .container.inputContains {
+        width: 40%
+    }
+    .inputsSection {
+        max-width: 60rem;
+    }
+    .wholeInput {
+        display: flex;
+        justify-content: space-between;
+    }
+    #goButton {
+        margin-top: -5rem;
     }
 }
 
-#svgBlur {
-    width: 15rem;
-    height: 15rem;
-    position: absolute;
-    z-index: -100;
+@media screen and (min-width: 320px) {
+    p {
+        font-size: 0.88rem;
+    }
 }
 
-#svgPlacement {
-    width: 12rem;
-    height: 12rem;
-    position: fixed;
-    overflow: hidden;
-    bottom: 0rem;
-    left: 0rem;
-    transform: rotate(90deg);
-    z-index: -100;
+@media screen and (min-width: 540px) {
+    p {
+        font-size: 1.1rem;
+    }
 }
 
+input{
+    background: none;
+}
+.btn-dark:focus{
+    box-shadow: 0px 0px 5px 3px #66bb6a;
+}
